src/test/ui/issues/issue-37510.stderr
error: compilation successful
  --> $DIR/issue-37510.rs:16:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     let opt = Some(92);
LL | |     let mut x = 62;
LL | |
...  |
LL | |     }
LL | | }
   | |_^

error: aborting due to previous error

